--- a/Cliente WPF/SerpientesEscaleras/packages.config
+++ b/Cliente WPF/SerpientesEscaleras/packages.config
@@ -3,4 +3,5 @@
   <package id="MaterialDesignColors" version="1.2.0" targetFramework="net461" />
   <package id="MaterialDesignThemes" version="2.6.0" targetFramework="net461" />
   <package id="MaterialSkin" version="0.2.1" targetFramework="net461" />
+  <package id="WpfAnimatedGif" version="1.4.18" targetFramework="net472" />
 </packages>
