Implementación de seguridad
Solo para métodos de la administración de la cuenta. Además, actualización de la base de datos.

--- a/Cliente WPF/SerpientesEscaleras/SerpientesEscaleras.csproj
+++ b/Cliente WPF/SerpientesEscaleras/SerpientesEscaleras.csproj
@@ -25,6 +25,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Debug\SerpientesEscaleras.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -186,6 +187,9 @@
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.en-US.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="Connected Services\ServidorJuegoSE\SerpientesEscaleras.ServidorJuegoSE.Cuenta.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
     <None Include="Connected Services\ServidorJuegoSE\SerpientesEscaleras.ServidorJuegoSE.FilaTablaPuntajes.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
