--- a/Cliente WPF/SerpientesEscaleras/SerpientesEscaleras.csproj
+++ b/Cliente WPF/SerpientesEscaleras/SerpientesEscaleras.csproj
@@ -71,9 +71,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Casilla.cs" />
     <Compile Include="CallbackMultijugador.cs" />
-    <Compile Include="Portal.cs" />
     <Compile Include="Connected Services\ServidorJuegoSE\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -199,17 +197,17 @@
     <None Include="Connected Services\ServidorJuegoSE\SerpientesEscaleras.ServidorJuegoSE.Sala.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
-    <None Include="Connected Services\ServidorJuegoSE\ServicioSistema.wsdl" />
-    <None Include="Connected Services\ServidorJuegoSE\ServidorSerpientesEscaleras.xsd">
+    <None Include="Connected Services\ServidorJuegoSE\ServicioSistema1.wsdl" />
+    <None Include="Connected Services\ServidorJuegoSE\ServidorSerpientesEscaleras4.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Connected Services\ServidorJuegoSE\ServidorSerpientesEscaleras1.xsd">
+    <None Include="Connected Services\ServidorJuegoSE\ServidorSerpientesEscaleras41.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Connected Services\ServidorJuegoSE\ServidorSerpientesEscaleras2.xsd">
+    <None Include="Connected Services\ServidorJuegoSE\ServidorSerpientesEscaleras42.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Connected Services\ServidorJuegoSE\ServidorSerpientesEscaleras3.xsd">
+    <None Include="Connected Services\ServidorJuegoSE\ServidorSerpientesEscaleras43.xsd">
       <SubType>Designer</SubType>
     </None>
     <None Include="Connected Services\ServidorSE\item.xsd">
@@ -299,9 +297,6 @@
     <Resource Include="Resources\Tablero\tablero.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Connected Services\ServidorJuegoSE\ServidorSerpientesEscaleras.disco" />
-  </ItemGroup>
-  <ItemGroup>
     <None Include="Connected Services\ServidorJuegoSE\configuration91.svcinfo" />
   </ItemGroup>
   <ItemGroup>
@@ -376,6 +371,9 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\Tablero\casillaEspecial.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\ServidorJuegoSE\ServidorSerpientesEscaleras1.disco" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
